// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput Rendering tests Shows TextInput with clear button disabled when clearable is true and input is empty 1`] = `
.c6 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(81,87,93,0.75), rgba(81,87,93,0.25), rgba(81,87,93,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c2 {
  display: block;
  position: relative;
}

.c2 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid transparent;
  cursor: pointer;
  background-color: transparent;
  color: #51575D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-filter: grayscale(1) contrast(0.5) brightness(1.2);
  filter: grayscale(1) contrast(0.5) brightness(1.2);
  pointer-events: none;
}

.c3:hover {
  background-color: rgba(0,0,0,0.05);
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c5 {
  vertical-align: middle;
}

.c0 {
  min-width: 10em;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.25em;
  border: 1px solid #51575D;
  background-color: #fff;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #64ACC5;
}

.c1 {
  border: 0 none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  outline: 0 none;
  font-size: 1em;
  padding: 0.5em;
  background-color: transparent;
}

.c4 {
  padding: 0.5em;
  height: 100%;
}

<div>
  <div
    class=" c0"
  >
    <input
      class=" c1"
      cols="10"
      role="textbox"
      rows="10"
      type="text"
    />
    <button
      aria-label="Clear"
      class=" c2 c3 c4"
      color="#51575D"
      disabled=""
      elevation="0"
      role="button"
      style="line-height: 0;"
      type="button"
    >
      <div
        class=" c5 "
      >
        <svg
          role="presentation"
          style="height: 1em; width: 1em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class=" c6"
        color="#51575D"
      />
    </button>
  </div>
</div>
`;

exports[`TextInput Rendering tests Shows TextInput with clear button enabled when clearable is true and input is populated (controlled) 1`] = `
.c10 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(81,87,93,0.75), rgba(81,87,93,0.25), rgba(81,87,93,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c2 {
  display: block;
  position: relative;
}

.c2 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid transparent;
  cursor: pointer;
  background-color: transparent;
  color: #51575D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover {
  background-color: rgba(0,0,0,0.05);
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c5 {
  vertical-align: middle;
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c0 {
  min-width: 10em;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.25em;
  border: 1px solid #51575D;
  background-color: #fff;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #64ACC5;
}

.c1 {
  border: 0 none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  outline: 0 none;
  font-size: 1em;
  padding: 0.5em;
  background-color: transparent;
}

.c4 {
  padding: 0.5em;
  height: 100%;
}

<div>
  <div
    class=" c0"
  >
    <input
      class=" c1"
      cols="10"
      role="textbox"
      rows="10"
      type="text"
      value="test"
    />
    <button
      aria-label="Clear"
      class=" c2 c3 c4"
      color="#51575D"
      elevation="0"
      role="button"
      style="line-height: 0;"
      type="button"
    >
      <div
        class=" c5 "
      >
        <svg
          role="presentation"
          style="height: 1em; width: 1em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
      <div
        class=" c10"
        color="#51575D"
      />
    </button>
  </div>
</div>
`;

exports[`TextInput Rendering tests Shows TextInput with clear button enabled when clearable is true and input is populated (uncontrolled) 1`] = `
.c10 {
  opacity: 0;
  background: linear-gradient( 90deg, rgba(81,87,93,0.75), rgba(81,87,93,0.25), rgba(81,87,93,0.75) ) repeat;
  color: transparent;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-size: 100vw 100vh;
  background-attachment: fixed;
  border-radius: 0.25rem;
  -webkit-animation: gZwmnl 2s linear infinite;
  animation: gZwmnl 2s linear infinite;
}

.c2 {
  display: block;
  position: relative;
}

.c2 > * {
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
}

.c6 {
  position: relative;
}

.c8 {
  pointer-events: none;
  position: absolute;
  top: 0;
  left: 0;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  font-size: 1em;
  padding: .75em 1em;
  border-radius: 0.25em;
  -webkit-transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  transition: background-color .2s, color .5s, outline .5s, filter .5s, box-shadow .5s;
  contain: layout;
  outline: 0 none;
  border: 1px solid transparent;
  cursor: pointer;
  background-color: transparent;
  color: #51575D;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover {
  background-color: rgba(0,0,0,0.05);
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #338BAA;
}

.c5 {
  vertical-align: middle;
}

.c7 {
  position: absolute;
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.c9 {
  border-radius: 0.25em;
}

.c0 {
  min-width: 10em;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.25em;
  border: 1px solid #51575D;
  background-color: #fff;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #64ACC5;
}

.c1 {
  border: 0 none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  outline: 0 none;
  font-size: 1em;
  padding: 0.5em;
  background-color: transparent;
}

.c4 {
  padding: 0.5em;
  height: 100%;
}

<div>
  <div
    class=" c0"
  >
    <input
      class=" c1"
      cols="10"
      role="textbox"
      rows="10"
      type="text"
    />
    <button
      aria-label="Clear"
      class=" c2 c3 c4"
      color="#51575D"
      elevation="0"
      role="button"
      style="line-height: 0;"
      type="button"
    >
      <div
        class=" c5 "
      >
        <svg
          role="presentation"
          style="height: 1em; width: 1em;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
            style="fill: currentColor;"
          />
        </svg>
      </div>
      <div
        class="c6 c7"
      >
        <svg
          class="c8 c9"
          height="0px"
          viewBox="0 0 0 0"
          width="0px"
        />
      </div>
      <div
        class=" c10"
        color="#51575D"
      />
    </button>
  </div>
</div>
`;

exports[`TextInput Rendering tests Shows TextInput with default props 1`] = `
.c0 {
  min-width: 10em;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.25em;
  border: 1px solid #51575D;
  background-color: #fff;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #64ACC5;
}

.c1 {
  border: 0 none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  outline: 0 none;
  font-size: 1em;
  padding: 0.5em;
  background-color: transparent;
}

<div>
  <div
    class=" c0"
  >
    <input
      class=" c1"
      cols="10"
      role="textbox"
      rows="10"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput Rendering tests Shows TextInput with fill variant 1`] = `
.c0 {
  min-width: 10em;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.25em;
  border: 1px solid transparent;
  border-bottom: 1px solid #51575D;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: #e6e6e6;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #64ACC5;
}

.c1 {
  border: 0 none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  outline: 0 none;
  font-size: 1em;
  padding: 0.5em;
  background-color: transparent;
}

<div>
  <div
    class=" c0"
  >
    <input
      class=" c1"
      cols="10"
      role="textbox"
      rows="10"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInput Rendering tests Shows TextInput with text variant 1`] = `
.c0 {
  min-width: 10em;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  border-radius: 0.25em;
  border: 1px solid transparent;
  background-color: #fff;
}

.c0:focus-within {
  outline: none;
  box-shadow: 0 0 5px 0.150rem #64ACC5;
}

.c1 {
  border: 0 none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  outline: 0 none;
  font-size: 1em;
  padding: 0.5em;
  background-color: transparent;
}

<div>
  <div
    class=" c0"
  >
    <input
      class=" c1"
      cols="10"
      role="textbox"
      rows="10"
      type="text"
    />
  </div>
</div>
`;
